--- a/public/login.html
+++ b/public/login.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="tr">
 <head>
   <meta charset="UTF-8"/>
-  <title>Yönetim Paneli</title>
+  <title>Giriş</title>
   <base href="#"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   <meta http-equiv="cache-control" content="no-cache">
@@ -33,7 +33,7 @@
   <body class="h-full">
   ```
 -->
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+<div class="flex min-h-full flex-col justify-center px-6 py-20 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <img class="mx-auto h-10 w-auto" src="./images/logo.svg" alt="Your Company">
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
